Fix: AttentionGetter flex styles overflowing.

--- a/site/src/assets/components/attention-getter-image/attention-getter-image.scss
+++ b/site/src/assets/components/attention-getter-image/attention-getter-image.scss
@@ -3,36 +3,26 @@
 
 div.attention-getter {
 	display: flex;
-	align-items: center;
-	flex-wrap: wrap;
-	@include theme.medium-media-query(){display: block}
-	a:has(img){
-		@include theme.medium-media-query(){
-			@include theme.center-by-margin($w:100%);
-			height: auto;
-		}
-	}
+	align-content: space-between;
+	flex-wrap: nowrap;
+  gap: 1em;
 	a>img{
 		&:hover{box-shadow: 3px 3px 10px black}
 		&:active{box-shadow:unset}
 		transition: box-shadow .1s;
 	}
 	img {
-		@include theme.medium-media-query(){
-			@include theme.center-by-margin($w:100%);
-			height: auto;
-		}
-		flex: 0 1 auto;
-		/* overflow: hidden; */
+		/* flex: 0 1 auto; */
 		border-radius: 100%;
 	}
 	div.sideText-container{
-		display: flex;
-		flex: 1 1 0%;
-		div:nth-child(3){
-			@include theme.medium-media-query(){max-width:100%}
+    display: flex;
+    flex-direction: column;
+    justify-items: space-around;
+    justify-content: center;
+    /* flex: 1 1 auto; */
 			color: v.$charcoal;
-		}
+      max-width: 100%;
 	}
 }
 
