--- a/site/src/landing-page/landing-page.scss
+++ b/site/src/landing-page/landing-page.scss
@@ -3,12 +3,3 @@
 @use "@css/variables" as v;
 
 @include theme.foundation;
-
-div.landing-page{
-	div.attention-getter {
-		@include theme.center-children-by-flex(
-			$childClassPrefix: "headshot-text",
-			$itemWidth: 20em
-		);
-	}
-}
